fixed svg spill over on letters components

--- a/client/styles/SvgLettersFire.module.css
+++ b/client/styles/SvgLettersFire.module.css
@@ -3,8 +3,9 @@
     /* transition: 1s font-size;
     transition: 1s top; */
     position: absolute;
-    /* top: 118px; */
-    left: 0;
+    top: 210px;
+    height: 500px;
+    width: 889px;
     
     
 }
