--- a/client/styles/SvgLettersWaves.module.css
+++ b/client/styles/SvgLettersWaves.module.css
@@ -1,11 +1,8 @@
 .svg {
-    /* transition: 1s font-size;
-    transition: .5s top; */
     position: absolute;
-    /* top: 118px; */
-    left: 0;
-    /* margin-top: 10px;
-    margin-bottom: 10px;  */
+    top: 210px;
+    height: 500px;
+    width: 889px;
     
     
 }
